secondfile/objects/GetFeedback_Survey__c.object
<CustomObject>
    <description>This object will have response data from GetFeedback surveys.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GetFeedback Surveys</relationshipLabel>
        <relationshipName>GetFeedback_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Tool__c</fullName>
        <label>CRM Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GetFeedback Surveys</relationshipLabel>
        <relationshipName>GetFeedback_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical__c</fullName>
        <label>Industry Vertical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GetFeedback Survey</label>
    <nameField>
        <label>GetFeedback Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetFeedback Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>